Fix : quelques fixs
enlever les ifs inutiles
compilation sur linux
clear linux
suppression attributs traduits par association